--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.548.0",
     "match-sorter": "^8.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
