--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-router-dom": "^7.9.4",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.26.1"
